--- a/about.html
+++ b/about.html
@@ -1,120 +1,138 @@
-import React from 'react';
-import { Code, Cloud, LineChart, Shield, Download } from 'lucide-react';
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="About Andrew Tay - Financial analyst and technology strategist with expertise in automation, cloud infrastructure, and digital transformation">
+    <meta name="keywords" content="Andrew Tay, Finance, Technology Strategy, Cloud Infrastructure, Automation, KYC Solutions">
+    <title>About Andrew Tay | Strategist • Innovator • Optimist</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- We'll use the same styles as index.html for consistency -->
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="nav-progress">
+        <div class="progress-bar"></div>
+    </div>
 
-const AboutSection = () => {
-  const skills = [
-    {
-      category: "Finance & Economics",
-      icon: <LineChart className="w-6 h-6" />,
-      items: ["Market Analysis", "Risk Assessment", "Investment Strategy", "Economic Modeling"]
-    },
-    {
-      category: "Cloud & Infrastructure",
-      icon: <Cloud className="w-6 h-6" />,
-      items: ["CI/CD Pipelines", "Cloud Architecture", "Infrastructure Automation", "DevOps Practices"]
-    },
-    {
-      category: "Development & Integration",
-      icon: <Code className="w-6 h-6" />,
-      items: ["API Integration", "Workflow Automation", "System Architecture", "Technical Documentation"]
-    },
-    {
-      category: "Compliance & Security",
-      icon: <Shield className="w-6 h-6" />,
-      items: ["KYC/KYB Implementation", "Regulatory Compliance", "Risk Management", "Security Frameworks"]
-    }
-  ];
-
-  return (
-    <section id="about" className="py-24 bg-white dark:bg-slate-900">
-      <div className="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        {/* Hero Section */}
-        <div className="max-w-3xl mx-auto text-center mb-16">
-          <h2 className="text-4xl font-bold text-slate-900 dark:text-white mb-6">
-            About Me
-          </h2>
-          <p className="text-lg text-slate-600 dark:text-slate-300">
-            My journey spans the worlds of finance, economics, startup ecosystems, and cutting-edge technology. 
-            I combine macro-level strategic thinking with deep technical expertise to help organizations 
-            scale and innovate in the next digital frontier.
-          </p>
-        </div>
-
-        {/* Background Section */}
-        <div className="mb-20">
-          <div className="bg-slate-50 dark:bg-slate-800 rounded-2xl p-8 shadow-lg">
-            <h3 className="text-2xl font-semibold text-slate-900 dark:text-white mb-6">
-              Background
-            </h3>
-            <div className="prose prose-lg dark:prose-invert max-w-none">
-              <p className="text-slate-600 dark:text-slate-300">
-                As a Singapore-based financial analyst, I delve into both macro and microeconomic factors 
-                shaping global markets. My experience includes working with top-tier organizations to 
-                implement workflow automation, identity verification solutions, and cloud infrastructure 
-                optimizations.
-              </p>
-              <p className="text-slate-600 dark:text-slate-300 mt-4">
-                Through these initiatives, I have gained hands-on insights into how technology can 
-                streamline processes, mitigate risk, and unlock new avenues of growth. I'm passionate 
-                about bridging the gap between data-driven decision-making and impactful innovation.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        {/* Skills Grid */}
-        <div className="mb-20">
-          <h3 className="text-2xl font-semibold text-slate-900 dark:text-white mb-8">
-            Skills & Expertise
-          </h3>
-          <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
-            {skills.map((skill, index) => (
-              <div 
-                key={index}
-                className="bg-white dark:bg-slate-800 rounded-xl p-6 shadow-lg hover:shadow-xl transition-shadow duration-300"
-              >
-                <div className="flex items-center mb-4">
-                  <div className="p-2 bg-blue-100 dark:bg-blue-900 rounded-lg">
-                    {skill.icon}
-                  </div>
-                  <h4 className="ml-4 text-xl font-semibold text-slate-900 dark:text-white">
-                    {skill.category}
-                  </h4>
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <a href="index.html" class="logo">AT</a>
+                <div class="nav-links">
+                    <a href="about.html" class="nav-link active">About</a>
+                    <a href="experience.html" class="nav-link">Experience</a>
+                    <a href="insights.html" class="nav-link">Insights</a>
+                    <a href="contact.html" class="nav-link">Contact</a>
                 </div>
-                <ul className="space-y-2">
-                  {skill.items.map((item, itemIndex) => (
-                    <li 
-                      key={itemIndex}
-                      className="flex items-center text-slate-600 dark:text-slate-300"
-                    >
-                      <span className="w-2 h-2 bg-blue-500 rounded-full mr-3"></span>
-                      {item}
-                    </li>
-                  ))}
-                </ul>
-              </div>
-            ))}
-          </div>
+                <button class="mobile-menu" aria-label="Toggle menu">☰</button>
+            </nav>
         </div>
+    </header>
 
-        {/* Resume Download */}
-        <div className="text-center">
-          <a
-            href="https://drive.google.com/file/d/13VmHh69bV6ojWFmCKpP2Q_suUU8jS7rV/view?usp=sharing"
-            target="_blank"
-            rel="noopener noreferrer"
-            className="inline-flex items-center px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-all duration-300 transform hover:-translate-y-1 shadow-lg hover:shadow-xl"
-          >
-            <Download className="mr-2 w-5 h-5" />
-            Download Resume
-          </a>
-          <p className="mt-4 text-sm text-slate-500 dark:text-slate-400">
-            For a more detailed overview of my professional experience
-          </p>
+    <main>
+        <section class="about-hero">
+            <div class="container">
+                <div class="hero-content">
+                    <h1 class="hero-title">About Andrew Tay</h1>
+                    <p class="hero-subtitle">
+                        My journey spans the worlds of finance, economics, startup ecosystems,
+                        and cutting-edge technology. Over the years, I've developed a skill set
+                        that combines macro-level strategic thinking with deep technical
+                        know-how, enabling me to help organizations scale and innovate in the
+                        next digital frontier.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="about-content">
+            <div class="container">
+                <div class="bio-section">
+                    <h2>Background</h2>
+                    <div class="bio-content">
+                        <p>
+                            I am a Singapore-based financial analyst who delves into both macro and
+                            microeconomic factors shaping global markets. My experience includes
+                            working with top-tier organizations to implement workflow automation,
+                            identity verification solutions, and cloud infrastructure optimizations.
+                        </p>
+                        <p>
+                            As a dynamic professional, I'm passionate about bridging the gap between
+                            data-driven decision-making and impactful innovation. Whether it's
+                            guiding strategic investment decisions, automating complex operational
+                            workflows, or providing thought leadership on market trends, I aim to
+                            create meaningful outcomes that resonate across industries.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="skills-expertise-section">
+                    <h2>Skills & Expertise</h2>
+                    <div class="skills-grid">
+                        <div class="skill-card">
+                            <h3>Finance & Economics</h3>
+                            <p>
+                                Expertise in analyzing macroeconomic trends, market sentiment, and 
+                                financial indicators to guide informed decision-making.
+                            </p>
+                        </div>
+                        <div class="skill-card">
+                            <h3>Cloud Infrastructure & Automation</h3>
+                            <p>
+                                Skilled in integrating modern CI/CD pipelines, iPaaS solutions, and 
+                                automating workflows to improve efficiency.
+                            </p>
+                        </div>
+                        <div class="skill-card">
+                            <h3>Operational Leadership</h3>
+                            <p>
+                                Experience leading cross-functional teams to deliver results in a 
+                                fast-paced digital environment.
+                            </p>
+                        </div>
+                        <div class="skill-card">
+                            <h3>Identity Verification & Compliance</h3>
+                            <p>
+                                Deep knowledge of global KYC/KYB nuances, regulatory requirements, and 
+                                successful deployment of identity verification frameworks.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="resume-section">
+                    <h2>Resume</h2>
+                    <p>
+                        If you would like a more detailed overview of my professional
+                        experience, feel free to download my resume:
+                    </p>
+                    <a href="https://drive.google.com/file/d/13VmHh69bV6ojWFmCKpP2Q_suUU8jS7rV/view?usp=sharing" 
+                       class="cta-button" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                        Download Resume
+                    </a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>© 2024 Andrew Tay. All Rights Reserved.</p>
+            <div class="social-links">
+                <a href="https://x.com/AndrewTaySG" target="_blank" rel="noopener noreferrer">X</a>
+                <a href="https://www.linkedin.com/in/andrew-tay/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                <a href="https://github.com/AndrewTay" target="_blank" rel="noopener noreferrer">GitHub</a>
+            </div>
         </div>
-      </div>
-    </section>
-  );
-};
+    </footer>
 
-export default AboutSection;
+    <button class="theme-toggle" aria-label="Toggle theme">🌓</button>
+
+    <script src="script.js"></script>
+</body>
+</html>
