--- a/index.html
+++ b/index.html
@@ -403,19 +403,6 @@
         <div class="container">
             <nav class="nav">
                 <a href="#" class="logo" aria-label="Andrew Tay">AT</a>
-                <div class="nav-links">
-                    <a href="#about" class="nav-link">About</a>
-                    <a href="#experience" class="nav-link">Experience</a>
-                    <a href="#insights" class="nav-link">Insights</a>
-                    <a href="#contact" class="nav-link">Contact</a>
-                </div>
-                <button class="mobile-menu" aria-label="Toggle menu" type="button">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <line x1="3" y1="12" x2="21" y2="12"></line>
-                        <line x1="3" y1="6" x2="21" y2="6"></line>
-                        <line x1="3" y1="18" x2="21" y2="18"></line>
-                    </svg>
-                </button>
             </nav>
         </div>
     </header>
@@ -426,7 +413,7 @@
                 <div class="hero-content">
                     <h1 class="hero-title">Building Tomorrow's Financial Technology</h1>
                     <p class="hero-subtitle">Strategist • Innovator • Optimist</p>
-                    <a href="#experience" class="cta-button">
+                    <a href="https://www.linkedin.com/in/andrew-tay/" class="cta-button">
                         Explore My Work
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <line x1="5" y1="12" x2="19" y2="12"></line>
