--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">Technology for Abundance</h1>
+                    <h1 class="hero-title">Abundance through Technology</h1>
                     <p class="hero-subtitle">Strategist • Innovator • Optimist</p>
                     <a href="https://www.linkedin.com/in/andrew-tay/" class="cta-button">
                         Explore My Work
