--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                 <div class="hero-content">
                     <h1 class="hero-title">Abundance through Technology</h1>
                     <p class="hero-subtitle">Strategist • Innovator • Optimist</p>
-                    <a href="https://www.linkedin.com/in/andrew-tay/" class="cta-button">
+                    <a href="experience" class="cta-button">
                         Explore My Work
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <line x1="5" y1="12" x2="19" y2="12"></line>
