--- a/experience.html
+++ b/experience.html
@@ -408,7 +408,14 @@
     </style>
 </head>
 <body>
-    <header class="header">
+        <header class="header">
+        <nav class="nav">
+            <a href="#" class="nav-brand" aria-label="Andrew Tay">AT</a>
+            <div class="nav-links">
+                <a href="#expertise" class="nav-link">Expertise</a>
+                <a href="#contact" class="nav-link">Contact</a>
+            </div>
+        </nav>
     </header>
 
     <main>
