--- a/experience.html
+++ b/experience.html
@@ -408,7 +408,7 @@
     </style>
 </head>
 <body>
-        <header class="header">
+    <header class="header">
         <nav class="nav">
             <a href="#" class="nav-brand" aria-label="Andrew Tay">AT</a>
             <div class="nav-links">
@@ -447,16 +447,50 @@
                                 <p class="expertise-text">AWS and GCP certified professional with extensive experience in cloud infrastructure design and implementation. Focus on scalable, secure, and efficient solutions.</p>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="expertise-card">
-                        <div class="expertise-content">
-                            <h3 class="expertise-title">Operational Leadership</h3>
-                            <p class="expertise-text">Co-founded and led GamerDraft as COO, building an innovative esports engagement platform. Managed product development, operations, and marketing strategy, successfully scaling to 5000+ users within 6 months.</p>
+                        <div class="expertise-card">
+                            <div class="expertise-content">
+                                <h3 class="expertise-title">Operational Leadership</h3>
+                                <p class="expertise-text">Co-founded and led GamerDraft as COO, building an innovative esports engagement platform. Managed product development, operations, and marketing strategy, successfully scaling to 5000+ users within 6 months.</p>
+                            </div>
                         </div>
                     </div>
 
                     <div class="social-links" id="contact">
                         <a href="https://linkedin.com/in/andrew-tay" class="social-link" target="_blank" rel="noopener noreferrer">
                             Connect on LinkedIn
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <button class="theme-toggle" aria-label="Toggle theme">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="5"/>
+            <line x1="12" y1="1" x2="12" y2="3"/>
+            <line x1="12" y1="21" x2="12" y2="23"/>
+            <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/>
+            <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/>
+            <line x1="1" y1="12" x2="3" y2="12"/>
+            <line x1="21" y1="12" x2="23" y2="12"/>
+            <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/>
+            <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/>
+        </svg>
+    </button>
+
+    <script>
+        // Theme toggle functionality
+        const themeToggle = document.querySelector('.theme-toggle');
+        themeToggle.addEventListener('click', () => {
+            document.documentElement.setAttribute('data-theme', 
+                document.documentElement.getAttribute('data-theme') === 'dark' ? 'light' : 'dark'
+            );
+        });
+    </script>
+</body>
+</html>
