--- a/experience.html
+++ b/experience.html
@@ -410,7 +410,7 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="#" class="nav-brand" aria-label="Andrew Tay">AT</a>
+            <a href="https://andrewtay.github.io/" class="nav-brand" aria-label="Andrew Tay">AT</a>
             <div class="nav-links">
                 <a href="#expertise" class="nav-link">Expertise</a>
                 <a href="#contact" class="nav-link">Contact</a>
