--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h1 class="hero-title">Abundance through Technology</h1>
-                    <p class="hero-subtitle">Strategist • Innovator • Optimist</p>
+                    <p class="hero-subtitle">Strategist • Innovator • Technoptimist</p>
                     <a href="experience" class="cta-button">
                         Explore My Work
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
