--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Andrew Tay, Financial Analysis, Technology Strategy, KYC Solutions, Enterprise Automation, Digital Transformation">
     <meta name="theme-color" content="#2563eb">
     <meta name="author" content="Andrew Tay">
-    <title>Andrew Tay | Strategist • Innovator • Optimist</title>
+    <title>Andrew Tay | Strategist • Innovator • Technoptimist</title>
     
     <!-- Preload critical fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
