--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             transition: var(--transition-standard);
         }
 
-        .dark .header {
+        [data-theme="dark"] .header {
             background: rgba(15, 23, 42, 0.9);
         }
 
