--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Andrew Tay, Financial Analysis, Technology Strategy, KYC Solutions, Enterprise Automation, Digital Transformation">
     <meta name="theme-color" content="#2563eb">
     <meta name="author" content="Andrew Tay">
-    <title>Andrew Tay | Strategist • Innovator • Technoptimist</title>
+    <title>Andrew Tay | Strategist • Innovator • Techno-optimist</title>
     
     <!-- Preload critical fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -412,7 +412,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h1 class="hero-title">Abundance through Technology</h1>
-                    <p class="hero-subtitle">Strategist • Innovator • Technoptimist</p>
+                    <p class="hero-subtitle">Strategist • Innovator • Techno-optimist</p>
                     <a href="experience" class="cta-button">
                         Explore My Work
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
