--- a/experience.html
+++ b/experience.html
@@ -411,10 +411,10 @@
     <header class="header">
         <nav class="nav">
             <a href="https://andrewtay.github.io/" class="nav-brand" aria-label="Andrew Tay">AT</a>
-            <div class="nav-links">
+<!--             <div class="nav-links">
                 <a href="#expertise" class="nav-link">Expertise</a>
                 <a href="#contact" class="nav-link">Contact</a>
-            </div>
+            </div> -->
         </nav>
     </header>
 
